<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/activity_schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_schedule_title" />

            <EditText
                android:id="@+id/activity_schedule_title_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/activity_schedule_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_schedule_category" />

            <EditText
                android:id="@+id/activity_schedule_category_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/activity_schedule_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_schedule_start" />

            <TextView
                android:id="@+id/activity_schedule_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:text="TextView" />

            <TextView
                android:id="@+id/activity_schedule_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:text="AM 0:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/activity_schedule_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_schedule_end" />

            <TextView
                android:id="@+id/activity_schedule_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:text="TextView" />

            <TextView
                android:id="@+id/activity_schedule_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line"
                android:text="AM 0:00" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_schedule_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ok_border"
        android:text="@string/activity_schedule_ok" />

</RelativeLayout>